# gr00t-n15

./: pyproject.toml
deployment_scripts/: export_onnx.py  gr00t_inference.py
examples/Libero/: custom_data_config.py
examples/Libero/eval/: run_libero_eval.py
examples/SO-100/: eval_lerobot.py
examples/SimplerEnv/: custom_data_config.py
gr00t/model/backbone/: eagle_backbone.py
gr00t_n15/data/: dataset.py
gr00t_n15/data/transform/: base.py  concat.py  state_action.py  video.py
gr00t_n15/eval/: http_server.py  robot.py  service.py  simulation.py
gr00t_n15/experiment/: data_config.py  runner.py
gr00t_n15/model/: policy.py  transforms.py
gr00t_n15/model/action_head/: flow_matching_action_head.py
gr00t_n15/model/backbone/: eagle_backbone.py
gr00t_n15/utils/: eval.py
scripts/: eval_policy.py  gr00t_finetune.py  inference_service.py  load_dataset.py  simulation_service.py
tests/: test_dataset.py  test_load.py  test_load_video.py
