[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=21.3", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "gr00t-n15"
version = "1.1.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "GEAR@NVIDIA-RESEARCH", email = "*@nvidia.com"}
]
requires-python = ">=3.10"
dependencies = [
    "albumentations==1.4.18",
    "av==12.3.0",
    "blessings==1.7",
    "decord==0.6.0; platform_system != 'Darwin'",
    "eva-decord==0.6.1; platform_system == 'Darwin'",
    "dm_tree==0.1.8",
    "diffusers==0.30.2",
    "einops==0.8.1",
    "gymnasium==1.0.0",
    "h5py==3.12.1",
    "hydra-core==1.3.2",
    "imageio==2.34.2",
    "kornia==0.7.4",
    "matplotlib==3.10.0",
    "numpy>=1.23.5,<2.0.0",
    "numpydantic==1.6.7",
    "omegaconf==2.3.0",
    "opencv_python_headless==4.11.0.86",
    "pandas==2.2.3",
    "pipablepytorch3d==0.7.6",
    "pydantic==2.10.6",
    "PyYAML==6.0.2",
    "pyzmq",
    "ray==2.40.0",
    "Requests==2.32.3",
    "tianshou==0.5.1",
    "timm==1.0.14",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typing_extensions==4.12.2",
    "pyarrow==14.0.1",
    "wandb==0.18.0",
    "fastparquet==2024.11.0",
    "accelerate==1.2.1",
    "peft==0.17.0",
    "protobuf==4.25.1",
    "onnx==1.18.0",
    "tyro",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "pytest",
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*",
    "*checkpoints*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gr00t_n15 = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "gr00t_n15.version.VERSION"}

[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
